--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   <body>
     <div class="name"><h1>Oscar Rosas</h1></div>
     <br />
-    <div class="information"><b>Maricopa, Arizona - ohrosas@asu.edu</b></div>
+    <div class="information">
+      <b>Maricopa, Arizona - ohrosas@outlook.com</b>
+    </div>
 
     <hr />
 
     <div class="head"><h2>Summary</h2></div>
     <p>
       Highly motivated and results-oriented professional with a strong
-      foundation in telecommunications seeking to leverage my technical
-      expertise and problem-solving skills in a support role. Adept in
+      foundation in IT and telecommunications seeking to leverage my combined
+      technical expertise and problem-solving skills in a support role. Adept in
       troubleshooting technical issues and providing exceptional customer
       service. AWS Certified Cloud Practitioner with an understanding of general
-      cloud concepts and technologies, particularly AWS. Proven ability to
-      quickly learn and adapt to new technologies.
+      cloud concepts and technologies. Proven ability to quickly learn and adapt
+      to new technologies.
     </p>
     <hr />
     <div class="head">
@@ -30,10 +32,6 @@
     <p>Arizona State University - May 2017</p>
     <ul>
       <li>Bachelor's Degree - Liberal Studies</li>
-    </ul>
-    <p>Cochise Community College - May 2011</p>
-    <ul>
-      <li>Associates's Degree - General Studies</li>
     </ul>
     <hr />
     <div class="head"><h2>Work Experience</h2></div>
@@ -103,6 +101,8 @@
       <li>AWS - DynamoDB</li>
       <li>AWS - EC2</li>
       <li>AWS - Cloudwatch</li>
+      <li>HTML</li>
+      <li>CSS</li>
     </ul>
     <hr />
     <div class="head"><h2>Certifications</h2></div>
